--- a/README
+++ b/README
@@ -10,4 +10,6 @@ In the event that this is not permitted by law, the following license applies:
 This code may be used, modified, and distributed in any form, whether modified
 or unmodifed, without restriction or credit, for any purpose whatsover.
 
-Regardless of whether this code is used under license or as public domain
+Regardless of whether this code is used under license or as public domain, 
+all warrantees are explicitly disclaimed, INCLUDING THE IMPLIED WARRANTEES
+OF MERCHANTABILITY AND FITNESS FOR ANY PURPOSE. 
